argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # Authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - argo-oeol.uchile.cl
      secretName: argocd-ingress-cert
  rules:
    - host: argo-oeol.uchile.cl
      http:
        paths:
        - path: /
          backend:
            serviceName: argocd-server
            servicePort: https
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-argocd-webhook
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - argo-oeol.uchile.cl
      secretName: argocd-ingress-cert
  rules:
    - host: argo-oeol.uchile.cl
      http:
        paths:
        - path: /api/webhook
          backend:
            serviceName: argocd-server
            servicePort: https
